Fix alignment issues (#150)

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -40,7 +40,7 @@ body {
 
 .share {
     font-size: 0; // Fix percentage issue with whitespace
-    margin: 4rem auto;
+    margin: 3rem auto;
     text-align: center;
   
     div {
